--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>TODO Application</title>
 </head>
 <body>
-   <h1>Todo Application</h1>
+   <h1>List-to-do Application</h1>
   <section class="main">
     <div class="form"> 
         <input class="to-in" type="text"  name="name" placeholder="Enter a list"  required/>
